spacing fix

--- a/src/pages/404/NotFound.scss
+++ b/src/pages/404/NotFound.scss
@@ -5,4 +5,6 @@
     text-align: center;
     flex-direction: column;
     height: 100vh;
+    margin:0;
+    padding: 0;
 }
